--- a/index.html
+++ b/index.html
@@ -6,11 +6,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/cc433fdd31.js" crossorigin="anonymous"></script>
+    <!-- style sheet  -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <!-- header start -->
+    <header>
 
+    </header>
+    <!-- header end -->
+    <!-- main part start from here -->
+    <main>
+        <!-- top vew -->
+        <section class="container">
+            <div class="flex-container">
+                <div class="top-heading">
+                    <h1 class="heading">Conmebol <br> Copa America 2021</h1>
+                    <a class="watch-link" href="https://www.google.com/" target=" _blank">Watch live <i class="fas
+                            fa-arrow-right"></i></a>
+                </div>
+                <div class="top-banner">
+                    <img class="banner" src="images/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- photo album -->
+        <section class="container">
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-7.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-8.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-9.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-10.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-11.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-12.png" alt="">
+                    <h1 class="player-name">Neymar Jr</h1>
+                    <p class="player-info">When we make the Guardian available to you online, we use cookies and similar
+                        technologies to help us to do this. Some are</p>
+                </div>
+
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
