--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
 
             </div>
         </section>
+        <footer>
+
+            <img src="images/Logo.png" alt="">
+            <div>
+                <i class="fab fa-instagram icon"></i>
+                <i class="fad fa-basketball-ball icon"></i>
+                <i class="fab fa-twitter icon"></i>
+                <i class="fab fa-youtube icon"></i>
+            </div>
+            <p id="text">Copyright © 2022 Football</p>
+        </footer>
     </main>
 </body>
 
